Ajustando nome do projeto e versão na package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "project142",
-  "version": "1.0.0",
+  "name": "project_142",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
