--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "project_142",
-  "version": "1.0.1",
+  "name": "projetooooo142",
+  "version": "1.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
