Ajustando nome e versão

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "projetooooo142",
-  "version": "1.1.1",
+  "name": "142",
+  "version": "1.10",
   "description": "",
   "main": "index.js",
   "scripts": {
