--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "projetooooo142",
-  "version": "1.1.1",
+  "name": "projeto",
+  "version": "1.51",
   "description": "",
   "main": "index.js",
   "scripts": {
